Model as finalizerService